@@ -17,21 +17,32 @@ public class DemoRtInformApplication implements CommandLineRunner {
     }
 
     @Override
-    public void run(String... args) throws Exception {
+    public void run(String... args) {
         int[] exampleArray = {1, 3, 4, 5, 1, 5, 4};
-        //Java
+
+        // Java
         Map<Integer, Integer> javaResult = JavaCounter.arrayCounter(exampleArray);
-        System.out.println( Arrays.toString(exampleArray) + " j-> " + javaResult);
+        System.out.println(Arrays.toString(exampleArray) + " j-> " + javaResult);
+
         // Groovy
-        GroovyClassLoader groovyClassLoader = new GroovyClassLoader();
-        Class<?> groovyClass = groovyClassLoader.parseClass(new File("src/main/java/com/rtinform/GroovyCounter.groovy"));
+        Class<?> groovyClass;
+        try (GroovyClassLoader groovyClassLoader = new GroovyClassLoader()) {
 
-        Object groovyObject = groovyClass.newInstance();
+            try {
+                groovyClass = groovyClassLoader.parseClass(new File("src/main/java/com/rtinform/GroovyCounter.groovy"));
+                Object groovyObject = groovyClass.getDeclaredConstructor().newInstance();
 
-        Map<Integer, Integer> result = (Map<Integer, Integer>) groovyClass
-            .getMethod("countOccurrences", int[].class)
-            .invoke(groovyObject, (Object) exampleArray);
-
-        System.out.println( Arrays.toString(exampleArray) + " g-> " + result);
+                Map<Integer, Integer> result = (Map<Integer, Integer>) groovyClass
+                    .getMethod("countOccurrences", int[].class)
+                    .invoke(groovyObject, exampleArray);
+                System.out.println(Arrays.toString(exampleArray) + " g-> " + result);
+            } catch (Exception e) {
+                System.err.println("Произошла ошибка при работе с Groovy-классом: " + e.getMessage());
+                e.printStackTrace();
+            }
+        } catch (Exception e) {
+            System.err.println("Ошибка при работе с GroovyClassLoader: " + e.getMessage());
+            e.printStackTrace();
+        }
     }
 }
